Add desktop configuration with electron wrapper for the react frontend, add desktop properties for local java spring api